# ZeroBot

./: .env  .env.example  .gitignore  README.md  advanced_strategy_finder.py  app.py  debug_data.py  debug_strategy.py  find_best_strategy.py  main.py  pyproject.toml  quick_strategy_test.py  requirements.txt  test_chartink_strategies.py  test_implementation.py
src/backtesting/: __init__.py  engine.py
src/dashboard/: __init__.py  dashboard.py
src/dashboard/assets/: custom.css
src/dashboard/pages/: analytics.py  settings.py  strategies.py  trades.py
src/data/: __init__.py  providers.py
src/optimization/: __init__.py  strategy_optimizer.py
src/simulation/: __init__.py  engine.py
src/trading/: bot.py  chartink_strategies.py  strategies.py  zerodha.py
src/utils/: config.py  logger.py
tests/: test_comprehensive.py
