[project]
name = "zerobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "colorama>=0.4.6",
    "dash>=3.1.1",
    "dash-bootstrap-components>=2.0.2",
    "dash-daq>=0.6.0",
    "flask>=3.1.1",
    "kiteconnect>=5.0.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pytest>=8.3.5",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "ta>=0.11.0",
    "tqdm>=4.67.1",
    "yfinance>=0.2.65",
]
